samples/_failures_safe/1761313691_b1aa66_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37148624.c: In function ‘main’:
./samples/SAFE/__tmp_37148624.c:183:22: error: expected ‘)’ at end of input
  183 |     print_matrix(mat2
      |                 ~    ^
      |                      )
./samples/SAFE/__tmp_37148624.c:183:5: error: expected declaration or statement at end of input
  183 |     print_matrix(mat2
      |     ^~~~~~~~~~~~
